samples/_failures_safe/1761083426_9e872e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b8c6e0c8.c:155:1: error: expected declaration specifiers or ‘...’ at end of input
  155 | int matrix_determinant(int **matrix,
      | ^~~
